# napvig

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: napvig.yaml
corridor_raiser/: CMakeLists.txt
corridor_raiser/config/: corridor_raiser.yaml
corridor_raiser/src/: corridor_raiser.cpp  corridor_raiser.h
launch/: napvig.launch  napvig_arena.launch
msg/: SearchHistory.msg
napvig/: CMakeLists.txt  package.xml
napvig/config/: napvig.yaml
napvig/launch/: napvig.launch
napvig/models/: model.sdf
napvig/msg/: SearchHistory.msg
napvig/scripts/: display.py  grad_log.py  replay.py
napvig/src/: landscape.cpp  landscape.h  multi_array_manager.h  napvig.cpp  napvig.h  napvig_handler.cpp  napvig_handler.h  napvig_manager.h.autosave  napvig_node.cpp  napvig_node.h  napvig_node_debugger.cpp  napvig_node_debugger.h  rotation.cpp  rotation.h
napvig/src/implementations/: napvig_legacy.cpp  napvig_legacy.h  napvig_predictive.cpp  napvig_predictive.cpp.autosave  napvig_predictive.h  napvig_predictive.h.autosave  napvig_randomized.cpp  napvig_randomized.h  napvig_x.cpp  napvig_x.cpp.autosave  napvig_x.h  napvig_x.h.autosave  policy.cpp  policy.cpp.autosave  policy.h  policy.h.autosave
napvig/src/implementations/napvig_x/: explorative_policies.cpp  fully_exploitative.cpp  fully_explorative.cpp.autosave  landmarks.cpp  landmarks.h  napvig_x.cpp  napvig_x.h
napvig_tests/: CMakeLists.txt  package.xml
napvig_tests/config/: ros_configuration.yaml
napvig_tests/launch/: arena_sim.launch  napvig.launch
scripts/: display.py  grad_log.py
src/: fake_target_node.h  napvig.cpp  napvig.cpp.autosave  napvig.h  napvig.h.autosave  napvig_map.cpp  napvig_map.h  napvig_node.cpp  napvig_node.h  rotation.h  unicycle_control.cpp  unicycle_control.h
target_detection/: CMakeLists.txt  package.xml
target_detection/config/: target_detection.yaml
target_detection/launch/: target_detection.launch
target_detection/src/: fake_target_node.cpp
unicycle_control/: CMakeLists.txt  package.xml
unicycle_control/config/: unicycle_control.yaml
unicycle_control/launch/: unicycle_control.launch
unicycle_control/src/: unicycle_control.cpp
worlds/: passage.world
